# bento-kit-cpp

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  package.json
.github/workflows/: ci.yml  release.yml  vcpkg-port.yml
cmake/: bento-kit-cppConfig.cmake.in  bento-kitConfig.cmake.in
ports/bento-kit/: portfile.cmake  vcpkg.json
ports/bento-kit-cpp/: portfile.cmake  vcpkg.json
scripts/: check-release.mjs  clean.mjs  cmake-configure.mjs  format.mjs  release-names.mjs  render-release-notes.mjs  resolve-version.mjs  sync-microsoft-vcpkg.sh  update-vcpkg-port.mjs  vcpkg-platforms.mjs
src/bento/: bento.hpp  platform.hpp
src/bento/id/: nanoid.hpp  random.hpp  session.hpp  uuid.hpp
src/bento/id/detail/: rng.hpp
src/bento/mask/: mask.hpp
src/examples/: id_demo.cpp  mask_demo.cpp  session_demo.cpp
src/tests/: CMakeLists.txt  mask_test.cpp  random_test.cpp  session_test.cpp  unicode_fixtures.hpp
